--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,27 @@
       "type": "java",
       "name": "Main",
       "request": "launch",
+      "mainClass": "Lab7.Java.Main",
+      "projectName": "Distributed Systems_c04d6a44"
+    },
+    {
+      "type": "java",
+      "name": "Main",
+      "request": "launch",
+      "mainClass": "Lab6.Java.Main",
+      "projectName": "Distributed Systems_c04d6a44"
+    },
+    {
+      "type": "java",
+      "name": "Main",
+      "request": "launch",
+      "mainClass": "Lab4.TaskC.Java.Main",
+      "projectName": "Distributed Systems_c04d6a44"
+    },
+    {
+      "type": "java",
+      "name": "Main",
+      "request": "launch",
       "mainClass": "Lab5.TaskC.Java.Main",
       "projectName": "Distributed Systems_c04d6a44"
     },
