--- a/Labs/src/Lab4/TaskA/resources/dbPhones.properties
+++ b/Labs/src/Lab4/TaskA/resources/dbPhones.properties
@@ -1,10 +1,11 @@
-18409525278=Stefan_Carey
-18409525378=Caitlin_Willis
+#
+#Mon Oct 16 08:58:57 EEST 2023
 18409525678=Jaden_Benjamin
-18409325278=Alyssia_Grimes
-18409345278=Kayne_Sawyer
-18409653278=Aisha_O'Reilly
-18403425278=Sebastian_Black
-18409794278=Darcie_Fox
-18403525278=Ollie_Bennett
+18409525278=Stefan_Carey
 18400225278=Khalil_Velez
+18409345278=Kayne_Sawyer
+18409525378=Caitlin_Willis
+18409794278=Darcie_Fox
+18403425278=Sebastian_Black
+18409325278=Alyssia_Grimes
+18403525278=Ollie_Bennett
