--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,15 @@
   "java.project.referencedLibraries": [
     "lib/**/*.jar",
     "c:\\Users\\Егор\\Documents\\mpj-v0_44\\lib\\mpj.jar",
-    "c:\\Users\\Егор\\Downloads\\mysql-connector-java-8.0.28.jar"
+    "c:\\Users\\Егор\\Downloads\\mysql-connector-java-8.0.28.jar",
+    "c:\\ProgramData\\apache-activemq-6.0.1\\lib\\activemq-client-6.0.1.jar",
+    "c:\\Users\\Егор\\Downloads\\jakarta.jms-api-3.1.0.jar",
+    "c:\\Users\\Егор\\Downloads\\slf4j.jar",
+    "c:\\Users\\Егор\\Downloads\\logback.jar",
+    "c:\\Users\\Егор\\Downloads\\hawtbuf-1.11-javadoc.jar"
+  ],
+  "java.project.sourcePaths": [
+    "Labs/src",
+    "ds_labs/src/main/java/labs/lab83"
   ]
 }
